2004-07-23	Victor Nilsson <vervex@home.se>

	* firefox/help: added help files

	* firefox/global/plugins.css: changed bg to white (from almost), 
	  though it doesn't make any sense

	* firefox/mozapps/downloads/downloads.css: small fix
	* firefox/update.rdf: moved to root
	* firefox/contents.rdf
	* firefox/oldclassic: deleted


2004-07-22	Victor Nilsson <vervex@home.se>

	* firefox/classic/skin/classic/mozapps/downloads/downloadOptions.png 
	* firefox/classic/skin/classic/mozapps/downloads/downloadCleanup.png
	* firefox/classic/skin/classic/browser/page-themes.png: new icon

	* src/page-themes.xcf
	* firefox/classic/skin/classic/mozapps/downloads/downloads.css
	* firefox/classic/skin/classic/mozapps/downloads/
	  downloadCleanupDisabled.png: deleted since it's not used 
	  anymore

	* firefox/classic/skin/classic/install.rdf: changed version 
	  number to 0.9.1


2004-07-22	Victor Nilsson <vervex@home.se>

	* firefox/classic/skin/classic/browser/tab-new.png: Some small 
	  changes according to the changes in the new tab icon in 
	  toolbar.png


2004-07-21	Victor Nilsson <vervex@home.se>

	* firefox/classic/skin/classic/mozapps/extensions/about.css: 
	  Changed background to white

	* firefox/classic/skin/classic/install.rdf: Changed homepageURL 
	  and updateURL

	* firefox/update.rdf


2004-07-21	Roman Joost <roman@bromeco.de>

	* firefox/classic/skin/classic/global/filepicker.css: removed icon
	  for files


2004-07-21	Roman Joost <roman@bromeco.de>

	* Changelog: added new Changelog for tracking commits
	
	* firefox/classic/skin/classic/global/browser.css: fixed
	  not appearing tab-loading.gif
	  
	* firefox/classic/skin/classic/global/plugins.css: changed to
	  nearly white background
	  
	* firefox/classic/skin/classic/browser/page-themes.png: new icon
	
	* firefox/classic/skin/classic/browser/toolbar.png: slight
	  modifications to 'new tab icon' based on the idea from
	  Thomas <office@agila.info>
	  
	* firefox/classic/skin/classic/browser/browser.css