@@ -163,3 +163,17 @@ sidebarheader > label {
 .toolbar-focustarget {
   -moz-user-focus: ignore !important;
 }
+
+/* ::::: web developer toolbar ::::: */
+.webdeveloper-toolbar-button
+{
+  list-style-image: url("chrome://browser/skin/webdev-toolbar.png") !important;
+}
+.webdeveloper-statusbar-button
+{ 
+  list-style-image: url("chrome://browser/skin/webdev-statusbar.png") !important; 
+}
+.webdeveloper-sidebar-button
+{
+ list-style-image: url("chrome://browser/skin/webdev-sidebar.png") !important;
+}
